; ModuleID = '/home/carl/AnghaBench/kphp-kdb/weights/extr_rpc-proxy-weights.c_weights_forward.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/weights/extr_rpc-proxy-weights.c_weights_forward.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TL_WEIGHTS_SET_HALF_LIFE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @weights_forward() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @tl_fetch_lookup_int()
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @TL_WEIGHTS_SET_HALF_LIFE, align 4
  %6 = icmp eq i32 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 (...) @default_query_diagonal_forward()
  store i32 %8, i32* %1, align 4
  br label %11

9:                                                ; preds = %0
  %10 = call i32 (...) @default_firstint_forward()
  store i32 %10, i32* %1, align 4
  br label %11

11:                                               ; preds = %9, %7
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @tl_fetch_lookup_int(...) #1

declare dso_local i32 @default_query_diagonal_forward(...) #1

declare dso_local i32 @default_firstint_forward(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
